--- a/templates/Component.tsx.hbs
+++ b/templates/Component.tsx.hbs
@@ -1,9 +1,8 @@
-import React from 'react';
-import styles from './{{pascalCase name}}.module.scss';
-import { I{{pascalCase name}}PropTypes } from './{{pascalCase name}}PropTypes';
+import React from 'react'
+import { I{{pascalCase name}}PropTypes } from './{{kebabCase name}}-prop-types'
 
 const {{pascalCase name}}: React.FC<I{{pascalCase name}}PropTypes> = ({}) => {
-  return <div className={ styles.{{pascalCase name}} }>{{pascalCase name}}</div>;
-};
+  return <div>{{pascalCase name}}</div>
+}
 
-export default {{pascalCase name}};
+export default {{pascalCase name}}
