--- a/templates/index.ts.hbs
+++ b/templates/index.ts.hbs
@@ -1,3 +1,1 @@
-import {{pascalCase name}} from './{{pascalCase name}}';
-
-export default {{pascalCase name}};
+export { default } from './{{kebabCase name}}'
